# connectors

./: README.md
cloudflare-workers/: .gitignore  README.md  package-lock.json  package.json  vitest.config.js  wrangler.toml
cloudflare-workers/src/: index.js
cloudflare-workers/tests/: setup.js
credentials/: MixpeekApi.credentials.ts
google-ad-manager/: README.md  jest.config.js  jest.config.live.js  package-lock.json  package.json
google-ad-manager/scripts/: build.js
google-ad-manager/src/: client.js  index.js  targeting.js
iab-ad-product-taxonomy/: LICENSE  README.md  jest.config.e2e.js  jest.config.js  jest.config.live.js  package-lock.json  package.json
iab-ad-product-taxonomy/python/: README.md  pyproject.toml
iab-ad-product-taxonomy/python/src/mixpeek_iab_product/: __init__.py  cache.py  client.py  keyword_mapping.py  mapper.py  taxonomy.py
iab-ad-product-taxonomy/python/src/mixpeek_iab_product.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
iab-ad-product-taxonomy/python/tests/: __init__.py  test_mapper.py
iab-ad-product-taxonomy/scripts/: build.js
iab-ad-product-taxonomy/src/: index.js
iab-ad-product-taxonomy/tests/: setup.js
iab-brand-safety/: README.md  jest.config.js  package-lock.json  package.json
iab-brand-safety/src/: index.js
n8n/: .eslintrc.js  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
n8n/demos/: VIDEO_SCRIPT.md  ai-agent-demo-workflow.json  mixpeek-demo-workflow.json
openrtb/: .npmignore  CHANGELOG.md  LICENSE  README.md  jest.config.e2e.js  jest.config.js  jest.config.live.js  package-lock.json  package.json
openrtb/scripts/: build.js
openrtb/src/: index.js
openrtb/tests/: setup.js
prebid-server/: LICENSE  README.md  jest.config.js  package-lock.json  package.json
prebid-server/scripts/: build.js
prebid-server/src/: content.js  index.js
prebid.js/: .babelrc  .eslintrc.js  .gitignore  .mixpeek.config.js  CHANGELOG.md  ENDPOINTS.md  Makefile  QUICKSTART.md  README.md  TESTING.md  jest.config.js  jest.config.live.js  package.json  postman_collection.json  webpack.config.js
prebid.js/docs/: MIGRATION_V2.md  api-reference.md  health-check.md  integration-guide.md
prebid.js/scripts/: switch-endpoint.sh  validate-setup.js  verify-capabilities.js  verify-mixpeek-taxonomy.js
prebid.js/tasks/: .gitkeep  ANALYTICS_AND_BENCHMARKING.md  README.md  (+14 more)
(+86 files in other folders)
