[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixpeek-iab-product"
version = "1.0.0"
description = "IAB Ad Product Taxonomy mapper for standardized product classification"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mixpeek", email = "info@mixpeek.com"}
]
maintainers = [
    {name = "Mixpeek", email = "info@mixpeek.com"}
]
keywords = [
    "iab",
    "taxonomy",
    "ad-product",
    "advertising",
    "adtech",
    "classification",
    "product-mapping",
    "mixpeek"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "cachetools>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/mixpeek/connectors/tree/main/iab-ad-product-taxonomy/python"
Documentation = "https://docs.mixpeek.com"
Repository = "https://github.com/mixpeek/connectors"
Issues = "https://github.com/mixpeek/connectors/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=mixpeek_iab_product --cov-report=term-missing"
